# web-lang

./: .eslintrc.cjs  .gitignore  README.md  package.json  parse.sh
compiler/: .gitignore  Cargo.toml  README.md  integration-tests  notes.md  run
compiler/examples/: backend-vs-frontend.nux  basic-type-checking.nux  basic-type-checking.nux.snapshot  block-expressions.nux  fibonacci.nux  fibonacci.nux.snapshot  hello-world.nux  if-expressions.nux  if-expressions.nux.snapshot  lists.nux  loops.nux  name-resolution-errors.nux  package-imports.nux  property-access.nux  property-access.nux.snapshot  return-functions.nux  return-functions.nux.snapshot  rule-110.nux  rule-90.nux  strings.nux  unary-operators.nux  variable-declarations.nux
compiler/examples/snapshots/: backend-vs-frontend.nux.snapshot  basic-type-checking.nux.snapshot  block-expressions.nux.snapshot  hello-world.nux.snapshot  lists.nux.snapshot  loops.nux.snapshot  name-resolution-errors.nux.snapshot  package-imports.nux.snapshot  property-access.nux.snapshot  rule-110.nux.snapshot  rule-90.nux.snapshot  snapshots.snapshot  strings.nux.snapshot  unary-operators.nux.snapshot  variable-declarations.nux.snapshot
compiler/src/: code_gen.rs  errors.rs  lexer.rs  main.rs  module_paths.rs  parser.lalrpop  parser.rs  program.rs
compiler/src/asts/: mod.rs  name_resolved.rs  source.rs
compiler/src/data_structures/: index_vec.rs
compiler/src/passes/: generate_symbols.rs  id_gen_and_reference_validation.rs  mod.rs  name_resolution.rs  shared.rs  type_inference.rs  (+1 more)
compiler/std/: io.nux  prelude.js  random.nux
(+128 files in other folders)
