[package]
name = "web-compiler"
version = "0.1.0"
edition = "2021"
default-run = "compiler"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
ariadne = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettydiff = "0.6.2"
clap = { version = "4.1.4", features = ["derive"] }
lalrpop-util = { version ="0.20.2", features = ["lexer", "unicode"] }

[[bin]]
name = "compiler"
path = "src/main.rs"

[[bin]]
name = "integration-tests"
path = "src/bin/integration_tests.rs"
